[package]
name = "aliyun-ddns"
version = "0.1.0"
authors = ["Devifish <devifish@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aliyunddns"

[dependencies]
log = "0.4"
simplelog = "0.7"
clap = "2.33.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
