[package]
name = "aliyun-ddns"
version = "0.1.0"
authors = ["Devifish <devifish@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aliyunddns"

[dependencies]
log = "0.4"
simplelog = "0.7"
clap = "2.33.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
fehler = "1.0.0"
serde = {version = "1.0.114", features = ["derive"]}
chrono = "0.4.13"
nanoid = "0.3.0"
rust-crypto = "0.2.36"
percent-encoding = "2.1.0"
url = "2.1.1"
base64 = "0.12.3"
serde_json = "1.0.56"
